<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/firstLinear">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTxt"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/login_tv2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailTxt"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/email_tv2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/debug_tv2"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:id="@+id/userImg2"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add"
            android:id="@+id/addBtn"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/show"
            android:id="@+id/showBtn"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logOut"
            android:id="@+id/logout_btn2"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</RelativeLayout>